--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,9 +67,9 @@
             android:background="#123456"
             android:gravity="center"
             android:textColor="#fff"
-            android:layout_width="80dp"
+            android:layout_width="120dp"
             android:layout_height="30dp"
-            android:text="音乐面板"
+            android:text="音乐面板 on/off"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -165,5 +165,26 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_debug4"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_debug3">
+
+
+        <CheckBox
+            android:id="@+id/cb_anim"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="#123456"
+            android:text="动画"
+            android:textColor="#fff"
+            android:layout_marginLeft="10dp"
+            android:layout_width="80dp"
+            android:layout_height="30dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
