--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,29 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.example.myapplication.SlideView
-        android:id="@+id/sv"
+
+    <com.example.myapplication.IFNViewPager
+        android:id="@+id/infini_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/bt_scan"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:src="@drawable/board"
-        android:textSize="30sp"
-        app:layout_constraintDimensionRatio="827:1733"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-
-    <ImageView
-        android:id="@+id/play_bt"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_margin="30dp"
-        android:src="@drawable/play"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_height="match_parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
